--- a/views/index.html
+++ b/views/index.html
@@ -6,12 +6,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta
-      name="author"
-      content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
-    />
-    <meta name="generator" content="Jekyll v3.8.6" />
     <title>Sticky Footer Navbar Template · Bootstrap</title>
 
     <link
@@ -25,6 +19,36 @@
       rel="stylesheet"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
+    />
+
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      href="/docs/4.4/assets/img/favicons/apple-touch-icon.png"
+      sizes="180x180"
+    />
+    <link
+      rel="icon"
+      href="/docs/4.4/assets/img/favicons/favicon-32x32.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      href="/docs/4.4/assets/img/favicons/favicon-16x16.png"
+      sizes="16x16"
+      type="image/png"
+    />
+    <link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json" />
+    <link
+      rel="mask-icon"
+      href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg"
+      color="#563d7c"
+    />
+    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico" />
+    <meta
+      name="msapplication-config"
+      content="/docs/4.4/assets/img/favicons/browserconfig.xml"
     />
     <meta name="theme-color" content="#563d7c" />
 
@@ -44,7 +68,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="sticky-footer-navbar.css" rel="stylesheet" />
+    <link href="/static.bootstrap-4.4/sticky-footer-navbar.css" rel="stylesheet" />
   </head>
   <body class="d-flex flex-column h-100">
     <header>
