🚡🌄 Checkpoint ./views/index.html:4790460/2 ./now.json:4790460/568 ./server.js:4790460/447 ./README.md:4790460/79

--- a/views/index.html
+++ b/views/index.html
@@ -68,7 +68,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="/static.bootstrap-4.4/sticky-footer-navbar.css" rel="stylesheet" />
+    <link href="/static/bootstrap-4.4/sticky-footer-navbar.css" rel="stylesheet" />
   </head>
   <body class="d-flex flex-column h-100">
     <header>
