--- a/views/index.html
+++ b/views/index.html
@@ -1,165 +1,80 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>Sticky Footer Navbar Template · Bootstrap</title>
+    <title>Glitch Employee Handbook</title>
+    <meta name="description" content="This is our handbook explaining how we run things at Glitch, edited by all of us on the team.">
+    <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#76ecff"/>
 
-    <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/4.4/examples/sticky-footer-navbar/"
-    />
-
-    <!-- Bootstrap core CSS -->
-    <link
-      href="https://getbootstrap.com/docs/4.4/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-
-    <!-- Favicons -->
-    <link
-      rel="apple-touch-icon"
-      href="/docs/4.4/assets/img/favicons/apple-touch-icon.png"
-      sizes="180x180"
-    />
-    <link
-      rel="icon"
-      href="/docs/4.4/assets/img/favicons/favicon-32x32.png"
-      sizes="32x32"
-      type="image/png"
-    />
-    <link
-      rel="icon"
-      href="/docs/4.4/assets/img/favicons/favicon-16x16.png"
-      sizes="16x16"
-      type="image/png"
-    />
-    <link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json" />
-    <link
-      rel="mask-icon"
-      href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg"
-      color="#563d7c"
-    />
-    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico" />
-    <meta
-      name="msapplication-config"
-      content="/docs/4.4/assets/img/favicons/browserconfig.xml"
-    />
-    <meta name="theme-color" content="#563d7c" />
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="/static/bootstrap-4.4/sticky-footer-navbar.css" rel="stylesheet" />
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/solid.css" integrity="sha384-TbilV5Lbhlwdyc4RuIV/JhD8NR+BfMrvz4BL5QFa2we1hQu6wvREr3v6XSRfCTRp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG" crossorigin="anonymous">
+    <link rel="stylesheet" href="//cloud.webtype.com/css/3a8e55c6-b1f3-4659-99eb-125ae72bd084.css">
+    <link rel="stylesheet" type="text/css" href="//culture-zine.glitch.me/culture/styles/styles.css">    
+    <link rel="stylesheet" href="/style.css">
+    <link rel="manifest" href="manifest.json">
+  <style>
+  </style>
   </head>
-  <body class="d-flex flex-column h-100">
+  <body>
+    <div class="container" id="top">
     <header>
-      <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarCollapse"
-          aria-controls="navbarCollapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link disabled"
-                href="#"
-                tabindex="-1"
-                aria-disabled="true"
-                >Disabled</a
-              >
-            </li>
-          </ul>
-          <form class="form-inline mt-2 mt-md-0">
-            <input
-              class="form-control mr-sm-2"
-              type="text"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
+      <nav class="navbar navbar-expand-lg navbar-light rounded">
+        <a class="navbar-brand" href="#">🎏 📗</a>
+        <form class="js-search-form form-inline">
+          <input id="s" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        </form>
+        <span class="badge badge-light" id="search-stats"></span>
+        <a class="navbar-item nav-link" href="https://glitch.com/edit/#!/handbook">Edit 🖊️</a>
       </nav>
     </header>
 
-    <!-- Begin page content -->
-    <main role="main" class="flex-shrink-0">
-      <div class="container">
-        <h1 class="mt-5">Sticky footer with fixed navbar</h1>
-        <p class="lead">
-          Pin a footer to the bottom of the viewport in desktop browsers with
-          this custom HTML and CSS. A fixed navbar has been added with
-          <code>padding-top: 60px;</code> on the
-          <code>main &gt; .container</code>.
-        </p>
-        <p>
-          Back to
-          <a href="/docs/4.4/examples/sticky-footer/"
-            >the default sticky footer</a
-          >
-          minus the navbar.
-        </p>
-      </div>
-    </main>
+    <main>
 
-    <footer class="footer mt-auto py-3">
-      <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+    <div class="row">
+      <div class="col-sm-12 col-md-8">
+        <div class="tab-content" id="nav-tabContent">
+        </div>
       </div>
+      <div class="col-sm-12 col-md-4 ">
+        <div class="list-group" id="list-tab" role="tablist">
+        </div>
+      </div>      
+    </div>
+         
+    <a href="#top" class="d-block d-md-none">^ top</a>
+        
+    </main>
+      
+      
+    <footer class="footer">
+      Made with ♥️ by <a href="https://glitch.com">the Pins team</a>, on <a href="https://glitch.com/edit/#!/handsome-sheet">Glitch</a> 🎏
     </footer>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      window.jQuery ||
-        document.write(
-          '<script src="https://getbootstrap.com/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>'
-        );</script
-    ><script
-      src="https://getbootstrap.com/docs/4.4/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
-      crossorigin="anonymous"
-    ></script>
+
+    <!-- include the Glitch button to show what the webpage is about and
+          to make it easier for folks to view source and remix -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.4.2/markdown-it.min.js"></script>
+    <script src="https://cdn.glitch.com/f55866fa-2ded-48bc-aa22-2f7c25415551%2Fsearch-index.min.js?1529700219457"></script>
+    <script src="/jquery.highlight.js"></script>
+    <script src="/app.js"></script>
+    <script type="text/javascript">
+      if('serviceWorker' in navigator) {
+        navigator.serviceWorker
+                 .register('/service-worker.js')
+                 .then(function(reg) {
+                   console.log('service worker registered --- ' + reg.scope);
+                 }).catch(function(err) {
+                   console.log('service worker failed --- ' + err);
+                 });
+      }
+    </script>
+    </div>
   </body>
 </html>
