🌹☎️ Checkpoint ./public/service-worker.js:4790460/1052 ./views/404.html:4790460/3085 ./views/index.html:4790460/77 ./public/jquery.highlight.js:4790460/3973 ./style.css:4790460/7658 ./views/offline.html:4790460/3461 ./server.js:4790460/1757 ./README.md:4790460/93

--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
       
       
     <footer class="footer">
-      Made with ♥️ by <a href="https://glitch.com">the Pins team</a>, on <a href="https://glitch.com/edit/#!/handsome-sheet">Glitch</a> 🎏
+      Made with ♥️ by <a href="https://telegram-bot.recaptime.tk">the Pins team</a>, on <a href="https://glitch.com/edit/#!/handsome-sheet">Glitch</a> 🎏
     </footer>
 
     <!-- include the Glitch button to show what the webpage is about and
