🔦🍫 Checkpoint ./views/offline.html:4790460/129 ./docs/welcome.md:4790460/913

--- a/views/offline.html
+++ b/views/offline.html
@@ -42,7 +42,7 @@
           Offline, try again later!
         </h1>
         <p>
-          If you're exp
+          If you're experiencing connectivity problems, try switching between networks or turn on airplane mode and turn off then try again.
         </p>
       </main>
       
