🍴🏪 Checkpoint ./docs/welcome.md:4790460/819 ./views/index.html:4790460/23 ./public/app.js:4790460/12 ./server.js:4790460/18 ./docs/index.md:4790460/41

--- a/views/index.html
+++ b/views/index.html
@@ -46,7 +46,7 @@
       </div>      
     </div>
          
-    <a href="#top" class="d-block d-md-none">^ top</a>
+    <a href="#top" class="d-block d-md-none">Go back to the top</a>
         
     </main>
       
