--- a/views/404.html
+++ b/views/404.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>404</title>
+    <title>404 Not Found</title>
     <meta name="description" content="This is our handbook explaining how we run things at Glitch, edited by all of us on the team.">
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
@@ -25,7 +25,7 @@
     <div class="container">
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded border border-light">
-          <a class="navbar-brand" href="#">Glitch Handbook</a>
+          <a class="navbar-brand" href="#">Recap Time Telegram Bot User Manual</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
